# move-vectormath

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONVENTIONS.md  HACKING.md  LICENSE.md  README.md  README_8md.html  about.html  about_8dox.html  all_8hpp.html  annotated.html  bounds_8hpp.html  classmove_1_1vectormath_1_1generic__normal.html  classmove_1_1vectormath_1_1generic__point.html  classmove_1_1vectormath_1_1generic__quat_1_1component__accessor.html  classmove_1_1vectormath_1_1generic__vec4_1_1component__accessor.html  classmove_1_1vectormath_1_1point.html  common_8hpp.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_75e33db4fb15466bc91b56a209fde83d.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_c6a2a6cbfd47cdf341a89c7b45a14f66.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  gcc-debug-compile-tests.sh  gcc-debug-init.sh  gcc-debug-tests.sh  gcc-release-compile-tests.sh  gcc-release-init.sh  gcc-release-tests.sh  gpumat4_8hpp.html  gpuvec2_8hpp.html  gpuvec3_8hpp.html  (+62 more)
.cache/clangd/index/: move-vectormath-test.cpp.478E581A7298D3BC.idx  move-vectormath.hpp.6686F05C4D1AB626.idx  move-vectormath.hpp.EA588AB681C20C4E.idx  sal.h.9F2FAFC91D6A2C6F.idx  vectormath.cxx.AE3CF0AEAF41C22D.idx  vectormath.hpp.D9A44E543DD41E2C.idx
.github/workflows/: ci.yml  ci.yml.disabled
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
docs/: Doxyfile.in
lib/: CMakeLists.txt
lib/include/move/: real_vectormath.hpp  vectormath.cxx  vectormath.hpp  vectormath.hpp.old  vectormath.incl
lib/include/move-vectormath/: move-vectormath.hpp
lib/include/move/vectormath/: all.hpp  bounds.hpp  common.hpp  fastmat4.hpp  fastmath.inl  fastquat.hpp  fastvec2.hpp  fastvec3.hpp  fastvec4.hpp  gpu_vec_3.hpp  gpu_vec_4.hpp  gpumat4.hpp  gpuvec2.hpp  gpuvec3.hpp  gpuvec4.hpp  macros.hpp  mat4.hpp  math.inl  normal.hpp  octahedral.hpp  point.hpp  quat.hpp  rtm_ext.hpp  scalar.hpp  underlying_types.hpp  vec2.hpp  vec3.hpp  vec3_rtm.hpp  vec3_scalar.hpp  vec4.hpp  vec4_rtm.hpp  vec4_scalar.hpp  vmathcereal.hpp  vmatherr.hpp  vmathjson.hpp
test/: CMakeLists.txt
test/all/: fastmat4-tests.cpp  fastvec3-tests.cpp  vec2-tests.cpp
test/source/: bounds-tests.cpp  bounds-tests.ixx  fastmat4-tests.cpp  fastquat-tests.cpp  fastvec2-tests.cpp  fastvec3-tests.cpp  mat4-tests.cpp  move-vectormath-test.cpp  mvm_test_utils.hpp  octahedral-mapping-tests.cpp.disabled  octahedral-mapping-tests.ixx  point-tests.cpp  quat-tests.cpp  vec2-tests.cpp  vec2-tests.ixx  vec3-tests.cpp  vec3-tests.ixx  vec4-tests.cpp  vec4-tests.ixx
